public/stylesheets/main.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500&display=swap');


*{
    box-sizing: border-box;
    font-family: 'Quicksand', sans-serif;
}

.site-wrapper{
    margin: 0;
    height: 100%;
    width: 100%;
    overflow-x: hidden;
    background: rgb(238, 238, 238);
}

body{
    margin: 0;
    height: 100%;
    width: 100%;
    overflow-x: hidden;
    background: rgb(238, 238, 238);
}

nav{
    background: #95F2D9;
}

.profile-posts-grid{
    column-gap: 5vh;
    row-gap: 5vw;
    margin: 0 5vw;
}

.profile-posts-grid-item{
    display: block;
    text-align: center;
    border: black solid 1px;       
}

a{
    text-decoration: none;
    color: #225669;
}

a:hover{
    transition: color 200ms ease-in;
    color: #241E4E;
}




#map{
    width: 100%;
    height: 50vh;
    z-index: 0;
}

@media only screen and (min-width: 768px){

    nav{
        height: 60px;
        display: flex;
        align-items: center;
    }

    nav ul{
        display: flex;
        justify-content: space-evenly;
        width: 100%;
        margin: 0;
    }

    nav ul li{
        list-style: none;
    }

    nav ul li a{
        color: black;
        font-size: 1.5rem;
        text-decoration: none;
    }

    nav ul li a:hover{
        color: white;
    }

    .profile-posts-grid{
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
        min-width: 600px;
    }
}

@media only screen and (max-width: 768px){

    form{
        margin: 30px auto;
        width: 70%;
    }

    nav{
        padding: 0 10px;
        display: flex;
        justify-content: space-between;
        align-items: center;
        height: 8vh;
        width: 100vw;
    }

    nav ul{
        position: absolute;
        margin: 0;
        top: 8vh;
        right: 0;
        display: block;
        background: #95F2D9;
        transform: translate(100%, 0);
        transition: transform 500ms;
        width: 50vw;
        height: 92vh;
        z-index: 1;
    }

    nav ul li{
        margin-top: 15px;
        list-style: none;
        display: block;
    }

    nav form{
        margin: 0;
        width: 0;
    }

    nav form button{
        margin-top: 20px;
        padding: 0;
        background: none;
        border: none;
        color: #225669;
        display: inline-block;
        font-weight: 500;
        font-size: 1rem;
    }

    .hamburger{
        visibility: visible;
        z-index: 1;
        position: relative;
    }

    .hamburger-1, .hamburger-2, .hamburger-3{
        width: 20px;
        height: 3px;
        margin: 5px;
        background: black;
        transition: transform 500ms;
    }

    form > *{
        display: block;
        margin: 0 auto;
        text-align: left;
        margin-bottom: 10px;
    }

    form input{
        width: 100%;
        height: 40px;
    }

    .profile-posts-grid{
        display: grid;
        grid-template-columns: 1fr;
    }

}

.show-menu{
    transform: translate(0, 0);
    transition: transform 500ms;
}

.toggle{

}

.toggle .hamburger-1{
    position: absolute;
    transform: rotate(45deg);
    top: 0;
    left: 0;
}

.toggle .hamburger-2{
    display: none;
}

.toggle .hamburger-3{
    transform: rotate(-45deg);
    top: 0;
    right: 0;
}

